// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-ve1you soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="caim5zy soui-switch-indicator"
  />
  <div
    class="csznf9k soui-switch-content"
  >
    <div
      class="cfcqa7n soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-ve1you soui-switch-wrapper c-7s6ajf soui-switch-wrapper-checked clxbd8e soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    >
      <div
        class="citkerv soui-switch-loading"
      />
    </div>
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ve1you soui-switch-wrapper clxbd8e soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    >
      <div
        class="citkerv soui-switch-loading"
      />
    </div>
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-ve1you soui-switch-wrapper c-snraz soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    />
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ve1you soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    />
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ve1you soui-switch-wrapper c-wpmtj soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    />
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-ve1you soui-switch-wrapper c-7s6ajf soui-switch-wrapper-checked clxbd8e soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    />
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ve1you soui-switch-wrapper clxbd8e soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="caim5zy soui-switch-indicator"
    />
    <div
      class="csznf9k soui-switch-content"
    >
      <div
        class="cfcqa7n soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
